frame/support/test/tests/pallet_ui/hold_reason_non_enum.rs
#[frame_support::pallet]
mod pallet {
	#[pallet::config]
	pub trait Config: frame_system::Config {}

	#[pallet::pallet]
	pub struct Pallet<T>(core::marker::PhantomData<T>);

	#[pallet::hold_reason]
	pub struct HoldReason;
}

fn main() {
}